fix: 진행 중 챌린지, 진행 완료 챌린지 필터링 오류 수정